# jwst-sed-anomaly

./: .gitignore  README.md  claude_code_prompts.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: pipeline_config.yaml  quality_config.yaml
notebooks/: 01_explore_catalogue.ipynb  02_sed_fitting_demo.ipynb  03_anomaly_detection.ipynb  04_interpretation.ipynb
pipeline/: __init__.py  output.py  quality.py  retriever.py  standardise.py
results/: references.md
results/paper/: Makefile  main.tex  references.bib  rnaas.tex
results/poster/: poster.html
results/tables/: interpretation_summary.tex  top_outliers.tex
scripts/: make_mass_sfr_figure.py  make_umap_figure.py
tests/: conftest.py  test_output.py  test_quality.py  test_retriever.py  test_standardise.py
