[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jwst-sed-anomaly"
version = "0.1.0"
description = "JWST SED anomaly detection pipeline (UW Astronomy, Summer 2026)"
authors = [{ name = "Aasha" }]
requires-python = ">=3.11"

[tool.setuptools]
packages = ["pipeline"]
